# visual-doc-retrieval-comparison

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: brouillon-checkpoint.ipynb
src/: evaluate.py  google_multimodalembedding_retrieval_method.py  gpt_4_0_captioning_retrieval_method.py  pypdf_retrieval_method.py  retrieval_method.py  utils.py
test/: test_evaluate.py  test_google_multimodalembedding_retrieval_method.py  test_pypdf_retrieval_method.py  test_utils.py
visual_doc_retrieval_comparison.egg-info/: PKG-INFO  SOURCES.txt
