[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-doc-retrieval-comparison"
version = "0.1"
description = "Work on different retrieval methods for highly visual documents"
authors = [
    { name="Nayel Ferai", email="ferainayel@gmail.com" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]